--- a/portfolio.css
+++ b/portfolio.css
@@ -1,5 +1,6 @@
 body {
-    background-color: lightgrey;
+    background-image: url(Images/MarshLucky.jpg);
+    width: 100%;
 }
 
 .navbar-brand {
@@ -10,8 +11,8 @@ body {
 
 .container {
     margin-top: 15px;
-    width: 66%;
-    height: 550px;
+    width: 100%;
+    height: 675px;
     background-color: white;
     float: left;
     margin-left: 25px;
