--- a/portfolio.css
+++ b/portfolio.css
@@ -5,18 +5,19 @@ body {
 }
 
 .navbar-brand {
-    background-color: turquoise;
+    background-color: greenyellow;
     padding: 10px;
     color: white;
 }
 
 .container {
+    text-align: center;
     margin-top: 15px;
     width: 100%;
     height: 675px;
-    background-color: white;
+    background-color: yellow;
     float: left;
-    margin-left: 25px;
+    margin-left: 100px;
 }
 
 .row {
