--- a/contact.css
+++ b/contact.css
@@ -1,11 +1,13 @@
 .container {
     background-color: coral;
-    height: 400px;
+    height: 80%;
     padding: 50px;
     margin: 15px;
     margin-left: 75px;
     margin-top: 50px;
-    width: 45%;
+    width: 42%;
+    text-align: left;
+    text-size-adjust: auto;
 }
 
 body {
