--- a/portfolio.css
+++ b/portfolio.css
@@ -5,7 +5,7 @@ body {
 }
 
 .navbar-brand {
-    background-color: greenyellow;
+    background-color: aqua;
     padding: 10px;
     color: white;
 }
@@ -15,7 +15,7 @@ body {
     margin-top: 15px;
     width: 100%;
     height: 675px;
-    background-color: yellow;
+    background-color: aqua;
     float: left;
     margin-left: 100px;
 }
