--- a/portfolio1.css
+++ b/portfolio1.css
@@ -45,9 +45,9 @@ body {
     
 .container {
     text-align: center;
-    margin-top: 35px;
+    margin-top: 15px;
     width: 60%;
-    height: 520px;
+    height: 540px;
     background-color: aqua;
     float: left;
     margin-left: 240px;
@@ -104,8 +104,13 @@ body {
     position: relative;
     bottom: 60px;
     text-align: center;
-    background-color: red;
+    background-color: darkgreen;
     color: white;
+}
+
+.label {
+    background-color: darkgreen;
+    color: black;
 }
     .portimage {
     width: 100%;
